// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render radio checked 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  position: absolute;
  display: block;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  cursor: pointer;
}

.c1 {
  position: relative;
  width: 12px;
  height: 12px;
  border-radius: 50%;
  padding: 6px;
  background-color: #ffffff;
  border: 1px solid #00000040;
  opacity: 1;
  -webkit-transition: box-shadow 0.3s ease-in-out;
  transition: box-shadow 0.3s ease-in-out;
}

.c2 {
  width: 12px;
  height: 12px;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  border-radius: 50%;
  -webkit-transition: -webkit-transform 0.15s cubic-bezier(0.34,1.56,0.64,1);
  -webkit-transition: transform 0.15s cubic-bezier(0.34,1.56,0.64,1);
  transition: transform 0.15s cubic-bezier(0.34,1.56,0.64,1);
  background-color: #6A50F2;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      data-testid="pbl-radio"
    >
      <div
        class="c2"
        data-testid="pbl-radio-handle"
      />
      <input
        checked=""
        class="c3"
        data-testid="pbl-radio-input"
        id="custom-id"
        type="radio"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Render radio unchecked 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  position: absolute;
  display: block;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  cursor: pointer;
}

.c1 {
  position: relative;
  width: 12px;
  height: 12px;
  border-radius: 50%;
  padding: 6px;
  background-color: #ffffff;
  border: 1px solid #00000040;
  opacity: 1;
  -webkit-transition: box-shadow 0.3s ease-in-out;
  transition: box-shadow 0.3s ease-in-out;
}

.c2 {
  width: 12px;
  height: 12px;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  border-radius: 50%;
  -webkit-transition: -webkit-transform 0.15s cubic-bezier(0.34,1.56,0.64,1);
  -webkit-transition: transform 0.15s cubic-bezier(0.34,1.56,0.64,1);
  transition: transform 0.15s cubic-bezier(0.34,1.56,0.64,1);
  background-color: #6A50F2;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      data-testid="pbl-radio"
    >
      <div
        class="c2"
        data-testid="pbl-radio-handle"
      />
      <input
        class="c3"
        data-testid="pbl-radio-input"
        id="custom-id"
        type="radio"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Render radio with label 1`] = `
.c0 {
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 1rem;
  line-height: 1.375em;
  margin-bottom: 0.5em;
  margin-bottom: 0px;
  margin-left: 8px;
}

<label
  data-testid="pbl-radio-label"
  for="custom-id"
>
  <h4
    class="c0"
  >
    I am a 
    <strong>
      label
    </strong>
  </h4>
</label>
`;
